# ax-js-platform

./: .gitignore  CLAUDE.md  LICENSE  NUMERICS.md  OBSERVATIONS.md  QUESTIONS.md  README.md  TESTING.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  test-report.txt  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
demo/: DEMOS.md  RENDERING.md  ax-js-demo.html  ax-js-demo.ipynb  ax-js-e2e.ipynb  ax_cockpit.html  ax_cockpit_old.html  ax_explorer.html  bayesian_optimization.html  build_demos.js  cockpit_vsip.js  cockpit_vsip.json  cross_validation.html  explorer_vsip.json  feature_importance.html  index.html  jupyter-demo.html  jupyter-demo.ipynb  optimization_trace.html  pbo.html  point_proximity.html  radar.html  response_surface.html  scatter_plots.html  scatteroid.html  shared.js  slice_plot.html
docs/: FORMAT.md  SERIALIZATION_CONTRACT.md  ax-js_vs_ax.md  cockpit.md  data-model.md  developer-guide.md  experimental.md  explorer.md  testing.md
example_viz/: gp_2d_response.html  gp_vsip_radar.html
plans/: action-plan.md  agent-playbook.md  automation-integration.md  codebase-observations.md  file-correspondence.md  parity-guide.md  style-guide.md  upstream-proposals.md
python/: _extraction.py  axjs_export.py  axjs_jupyter.py  benchmarks.py  build_demo_notebook.py  build_e2e_notebook.py  fixture_helpers.py  generate_ax_fixtures.py  generate_fixtures.py  requirements.txt
scripts/: verify-docs.sh
src/: index.ts  math.ts  predictor.ts  sensitivity.ts  sensitivity_analytic.ts
test/: api_smoke.test.ts  bench_transpose.ts  (+8 more)
(+221 files in other folders)
